--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,3 +266,28 @@ a {
     border: none;
     tab-index: 0;
 }
+
+/************ Menukaart *************/
+
+.groepen-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.gerechtgroep {
+    flex: 1 1 calc(50% - 20px); /* 2 per rij met ruimte tussen */
+    box-sizing: border-box;
+    margin-bottom: 30px;
+    border: 1px solid #eee;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #f9f9f9;
+}
+.gerechtgroep h2 {
+    border-bottom: 1px solid #ccc;
+    margin-top: 0;
+}
+.gerecht {
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
