--- a/public/css/style.css
+++ b/public/css/style.css
@@ -291,3 +291,15 @@ a {
     margin-left: 10px;
     margin-bottom: 10px;
 }
+
+.favoriet-heart {
+    cursor: pointer;
+    font-size: 1.5em;
+    color: lightgray;
+    user-select: none;
+    transition: color 0.3s ease;
+}
+
+.favoriet-heart.favoriet {
+    color: red;
+}
